objects/JBCXM__SurveyMaster__c.object
<CustomObject>
    <description>Survey Master object lists the surveys that have been published and feedback is collected.</description>
    <fields>
        <fullName>JBCXM__AccountLevelAggregation__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <description>To store the account level aggregation data of Promoters, Passives, Detractors by user role.</description>
        <label>Account Level Aggregation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerDistributionCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This represents number of Customers to sent the Survey.</description>
        <inlineHelpText>This represents number of Customers to sent the Survey.</inlineHelpText>
        <label>Customer Distribution Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this is the default record again which all the survey responses will be saved.</description>
        <inlineHelpText>Check if this is the default record again which all the survey responses will be saved.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__EndDate__c</fullName>
        <description>The date when the survey ends</description>
        <inlineHelpText>End date of the survey.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <defaultValue>&quot;ACCOUNT&quot;</defaultValue>
        <label>EntityType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__PublishDate__c</fullName>
        <description>It represents when the survey was published.</description>
        <inlineHelpText>Published date of the Survey.</inlineHelpText>
        <label>Publish Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>NPSSurvey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__StartDate__c</fullName>
        <description>The date during which the survey started</description>
        <inlineHelpText>Start date of the survey.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyId</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipName>NPSSurvey_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyName__c</fullName>
        <description>Name of the Survey.</description>
        <inlineHelpText>Name of the Survey.</inlineHelpText>
        <label>Survey Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyType__c</fullName>
        <description>To describe the type of the survey. For example NPS would mean that this survey master record is to track NPS survey responses.</description>
        <inlineHelpText>Survey Type: Eg:NPS</inlineHelpText>
        <label>Survey Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserDistributionCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This represents number of Users to sent the Survey.</description>
        <inlineHelpText>This represents number of Users to sent the Survey.</inlineHelpText>
        <label>User Distribution Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserLevelAggregation__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <description>To store the account level aggregation data of Promoters, Passives, Detractors by user role.</description>
        <label>User Level Aggregation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>NPS Survey Master</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__SurveyName__c</columns>
        <columns>JBCXM__UserLevelAggregation__c</columns>
        <columns>JBCXM__AccountLevelAggregation__c</columns>
        <columns>JBCXM__CustomerDistributionCount__c</columns>
        <columns>JBCXM__UserDistributionCount__c</columns>
        <columns>JBCXM__SurveyType__c</columns>
        <columns>JBCXM__PublishDate__c</columns>
        <columns>JBCXM__StartDate__c</columns>
        <columns>JBCXM__EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Survey Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>JBCXM__EndDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>JBCXM__EndDate__c  &lt;  JBCXM__StartDate__c</errorConditionFormula>
        <errorMessage>Start Date cannot be greater than End date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JBCXM__StartDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>JBCXM__PublishDate__c  &gt; JBCXM__StartDate__c</errorConditionFormula>
        <errorMessage>Start Date cannot be less than Publish Date</errorMessage>
    </validationRules>
</CustomObject>